[workspace]
resolver = "2"
members = [
"crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
repository = "https://github.com/louisponet/ma_timing"
authors = ["Louis Ponet <louisponet@gmail.com>"]
license = "MIT"

[workspace.dependencies]
ma_time   = {path = "crates/ma_time"}
ma_timing = {path = "crates/ma_timing"}
ma_queues = {git = "https://github.com/louisponet/ma_ipc", default-features=false, features=["shmem"]}
# ma_queues = {path = "../ma_ipc/crates/ma_queues", default-features=false, features=["shmem"]}

quanta = "^0.12"
once_cell = "^1.18"
serde = {version="^1",features=["derive"]}
web-time = "^1.0"

fern = "^0.6"

rgb = "^0.8"
textplots = "^0.8"
log = "^0.4"
clap = { version = "^4.4", features = ["derive"]}
walkdir = "^2.4"
crossterm =  "^0.27"
ratatui = { version = "^0.24", default-features = false, features = ["crossterm"]}
chrono = "^0.4"
shared_memory = "^0.12"
thiserror = "^1.0"
criterion = "^0.5"
proc-macro2="^1.0"
quote = "^1.0"
core_affinity = "^0.8"


[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.bench]
debug = true

[profile.release-with-debug]
inherits="release"
debug=true
